# clausia-api

./: .env.dev  .gitignore  Dockerfile  README.md  copy-tls-cert.sh  docker-compose-db.yml  docker-compose.yaml  go.mod  go.sum  hotspot-pid-248475-id-1-2024_08_29_17_10_28.jfr  main.go  startDb.sh  startproject.sh
api/handlers/auth/: auth.go  changepw.go  checkIfUserExistes.go  checkpw.go  confirmNewEmail.go  confirmforgotpw.go  forgotpw.go  middleware.go  otp.go  resend.go  signin.go  signout.go  signup.go  updateEmailOrPhone.go
api/handlers/certs/: createIdentity.go
api/handlers/contract/: addClause.go  addClauses.go  addEvaluateDate.go  addInputsToCheckFIne.go  addInputsToMakePayment.go  addParticipantRequest.go  addParticipants.go  addReferenceDate.go  addReviewToContract.go  addStoredValueToGetCredit.go  cancelContract.go  createContract.go  createTemplate.go  createTemplateCLause.go  duplicateTemplate.go  editTemplate.go  editTemplateClause.go  executeContract.go  getClause.go  getContract.go  getDatesWithClause.go  getUserContracts.go  removeClause.go  removeTemplate.go  removeTemplateClause.go  shareTemplate.go  viewSharedTemplate.go
api/handlers/documents/: cancelDocument.go  checkExpiredDocs.go  downloadDocument.go  expectedSignatures.go  getDocument.go  listSuccessfullSignatures.go  listUserDocs.go  pendingSignatures.go  signDocument.go  updateDocNameOrTimeout.go  uploadDocument.go
api/handlers/errorhandler/: returnError.go
api/handlers/user/: confirmUser.go  (+1 more)
api/routes/: routes.go
api/server/: server.go
certs/: caManager.go
chaincode/: addClause.go  addClauses.go  addEvaluateDate.go  addInputToMakePayment.go  addInputsToCheckFine.go  addParticipants.go  addReferenceDate.go  addReview.go  addStoredValueToGetCredit.go  cancelContract.go  cancelDocument.go  createAutoExecutableContract.go  createSigner.go  createTemplate.go  createTemplateClause.go  duplicateTemplate.go  editTemplate.go  editTemplateClause.go  executContract.go  getDoc.go  getDocHistory.go  getExecutableContract.go  getExpectedUserDoc.go  getExpiredDocuments.go  getSIgnerKey.go  getSigner.go  removeClause.go  removeTemplate.go  removeTemplateClause.go  searchAsset.go  searchAssetTx.go  types.go  updateDocument.go  updateSigner.go  uploadDocumentTransaction.go
config/: db-rs-init.sh  fabric-ca-server-config.yaml  sdk-go.yaml
db/: collections.go  db.go  notifications.go
env/: env.go  get.go
go-sign/: Dockerfile  Dockerfile.dev  README.md  docker-compose-dev.yaml  docker-compose.yaml  go.mod  go.sum  main.go
go-sign/api/: api_test.go  getLedgerKey.go  getLedgerKey_test.go  saltPdf.go  saltPdf_test.go  signDocument.go  signDocument_test.go  verifyPdf.go  verifyPdf_test.go
go-sign/logger/: logger.go
go-sign/pdf-lib/: .clang-format  CMakeLists.txt  Dockerfile.c  README.md  buildInstall.sh  buildRun.sh  configure.sh  pdfsign.pc.in
go-sign/pdf-lib/include/: Annotations.hpp  BaseDocument.hpp  Document.hpp  Signer.hpp  VType.hpp  names.hpp  pdfsign.h  pdfutils.hpp  wrapper.hpp
go-sign/pdf-lib/spec/: testUtils.cpp  testUtils.hpp  test_const.h  test_document.cpp  test_signer.cpp
go-sign/pdf-lib/spec/fixtures/keys/: cert.pfx  certificate-private.pem  certificate-private.pfx  certificate.pem  certificate.pfx  private-key.pem  pubkey.pem
go-sign/pdf-lib/src/: Annotations.cpp  BaseDocument.cpp  Document.cpp  Signer.cpp  images.cpp  pdfsign.c  pdfutils.cpp  sign.cpp  wrapper.cpp
go-sign/pdfsign/: pdfsign.go  types.go
go-sign/test/: 47773901104.pfx
s3/: client.go  utils.go
utils/: downloadFileFromS3.go  generateInviteToken.go  getFilesBytes.go  searchAndReturnSignerKey.go  secretHash.go  sendInviteEmail.go  uplloadSignedDocumenttos3.go  uploadCertToS3.go  uploadFileToS3.go  uploadReceiptToS3.go  verifyInviteToken.go
websocket/: client.go  handler.go  websocket.go
(+7 files in other folders)
